fix: user profile country default
Co-authored-by: orangeappless <wilf.ta0072@gmail.com>

--- a/views/administrator/user.hbs
+++ b/views/administrator/user.hbs
@@ -74,7 +74,7 @@
                 </div>
                 <div class="form-group col-md-4">
                         <select name="country" class="form-control country">
-                            <option disabled selected value="null_value">select your country</option>
+                            <option disabled selected value="null_value">Select Country</option>
                             <option value="Canada" {{defaultDropdown "Canada" user.country}}>Canada</option>
                             <option value="United States" {{defaultDropdown "United States" user.country}}>United States</option>
                         </select>
@@ -82,25 +82,29 @@
                 <div class="form-group col-md-4">
                     <select name="province_state" class="form-control provincestate">
                         {{#if (checkCountry "Canada" user.country)}}
-                        <option disabled selected value="null_value">select your province</option>
-                        <option {{defaultDropdown "AB" user.province_state}} value="Alberta">Alberta</option>
-                        <option {{defaultDropdown "BC" user.province_state}} value="British Columbia">British Columbia</option>
-                        <option {{defaultDropdown "MB" user.province_state}} value="Manitoba">Manitoba</option>
-                        <option {{defaultDropdown "NB" user.province_state}} value="New Brunswick">New Brunswick</option>  
-                        <option {{defaultDropdown "NL" user.province_state}} value="Newfoundland and Labrador">Newfoundland and Labrador</option>
-                        <option {{defaultDropdown "NS" user.province_state}} value="Nova Scotia">Nova Scotia</option>  
-                        <option {{defaultDropdown "ON" user.province_state}} value="Ontario">Ontario</option>
-                        <option {{defaultDropdown "PE" user.province_state}} value="Prince Edward Island">Prince Edward Island</option>
-                        <option {{defaultDropdown "QC" user.province_state}} value="Quebec">Quebec</option>   
-                        <option {{defaultDropdown "SK" user.province_state}} value="Saskatchewan">Saskatchewan</option>
-                        <option {{defaultDropdown "NT" user.province_state}} value="Yukon">Yukon</option>
-                        <option {{defaultDropdown "NU" user.province_state}} value="Northwest Territories">Northwest Territories</option>
-                        <option {{defaultDropdown "YT" user.province_state}} value="Nunavut">Nunavut</option>
-                        {{/if}}
-                        {{#if (checkCountry "United States" user.country)}}
+                        <option disabled selected value="null_value">Select Province</option>
+                        <option {{defaultDropdown "AB" user.province_state}} value="AB">Alberta</option>
+                        <option {{defaultDropdown "BC" user.province_state}} value="BC">British Columbia</option>
+                        <option {{defaultDropdown "MB" user.province_state}} value="MB">Manitoba</option>
+                        <option {{defaultDropdown "NB" user.province_state}} value="NB">New Brunswick</option>  
+                        <option {{defaultDropdown "NL" user.province_state}} value="NL">Newfoundland and Labrador</option>
+                        <option {{defaultDropdown "NS" user.province_state}} value="NS">Nova Scotia</option>  
+                        <option {{defaultDropdown "ON" user.province_state}} value="ON">Ontario</option>
+                        <option {{defaultDropdown "PE" user.province_state}} value="PE">Prince Edward Island</option>
+                        <option {{defaultDropdown "QC" user.province_state}} value="QC">Quebec</option>   
+                        <option {{defaultDropdown "SK" user.province_state}} value="SK">Saskatchewan</option>
+                        <option {{defaultDropdown "YT" user.province_state}} value="YT">Yukon</option>
+                        <option {{defaultDropdown "NT" user.province_state}} value="NT">Northwest Territories</option>
+                        <option {{defaultDropdown "NU" user.province_state}} value="NU">Nunavut</option>
+                        {{else if (checkCountry "United States" user.country)}}
+                        <option disabled selected value="null_value">Select State</option>
                         <option {{defaultDropdown "CA" user.province_state}} value="CA">California</option>
                         <option {{defaultDropdown "NY" user.province_state}} value="NY">New York</option>
+                        {{else}}
+                        <option disabled selected value="null_value">Province/State</option>
                         {{/if}}
+
+                        
                     </select>
                 </div>
             </div>
