--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -262,6 +262,14 @@ a.sidenav_panel {
     margin-right: 2%;
 }
 
+.event-detail-section {
+    /* background-color: #F17C0E; */
+    /* border: 15px solid #F17C0E; */
+    height: 33%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
 .non-admin-account-jumbotron {
     /* background-color: #F17C0E; */
     /* border: 15px solid #F17C0E; */
@@ -318,15 +326,13 @@ a.sidenav_panel {
 }
 
 .single_event_text {
-    text-indent: 4%;
+    /* text-indent: 4%; */
 }
 
 .event_desc_box {
     background-color: #e9ecef;
-    border: 15px solid #e9ecef;
+    border: 25px solid #e9ecef;
     height: 30%;
-    margin-left: 4%;
-    margin-right: 2%;
 }
 
 .attendees_list{
@@ -343,7 +349,7 @@ a.sidenav_panel {
 } */
 
 .user_account_table form{
-  margin: 0;
+    margin: 0;
 }
 
 .event_tr:nth-child(even) {
@@ -355,7 +361,8 @@ text{
 }
 
 #printDoc {
-    margin-left: 2%;
+    float: right;
+    width: 100%;
 }
 
 #iframediv {
