--- a/views/administrator/webcontent/home.hbs
+++ b/views/administrator/webcontent/home.hbs
@@ -18,8 +18,7 @@
     <br><br>
 
     {{!-- <button type="button" data-toggle="modal" data-target="#uploadCarouselImage" class="btn btn-outline-success">Add New</button> --}}
-    <div class="modal fade" id="uploadCarouselImage" tabindex="-1" role="dialog" aria-labelledby="uploadCarouselImage"
-        aria-hidden="true">
+    <div class="modal fade" id="uploadCarouselImage" tabindex="-1" role="dialog" aria-labelledby="uploadCarouselImage" aria-hidden="true">
         <form method="post" action="/upload" enctype="multipart/form-data">
             <div id="uploadCarousel" class="modal-dialog" role="document">
                 <div class="modal-content">
