--- a/views/administrator/webcontent/agenda.hbs
+++ b/views/administrator/webcontent/agenda.hbs
@@ -13,9 +13,11 @@
         {{> menu}}
 
         <h1>{{heading}}</h1>
-        <br><br>
         <div class="user-account-jumbotron">
-            <button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#addAgendaForm">New Agenda Item</button>
+            <br><br>
+
+            <h3>Agenda</h3> 
+            <button class="btn btn-success" type="button" data-toggle="modal" data-target="#addAgendaForm">Add New Agenda Item</button>
             <br><br>
             <!-- Modal -->
             <div class="modal fade" id="addAgendaForm" tabindex="-1" role="dialog" aria-labelledby="newAgendaFormLabel"
