--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer d-flex justify-content-center">
-                                <button class="btn btn-deep-orange">Create</button>
+                                <button class="btn btn-outline-primary">Create</button>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                     {{!-- EDIT EVENT cell --}}
                     <td class="event_text" style="text-align: center; width: 127px;">
                         {{!-- EDIT EVENT button: Reveals modal --}}
-                        <button class="event_button btn btn-outline-primary" type="button" data-toggle="modal" data-target="#editEventForm{{event_uuid}}">Edit event</button>
+                        <button class="event_button btn btn-outline-primary" type="button" data-toggle="modal" data-target="#editEventForm{{event_uuid}}">Edit Event</button>
                         
                         {{!-- EDIT EVENT modal --}}
                         <div class="modal fade" id="editEventForm{{event_uuid}}" tabindex="-1" role="dialog" aria-labelledby="editEventFormLabel" aria-hidden="true">
@@ -102,7 +102,7 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer d-flex justify-content-center">
-                                            <button class="btn btn-deep-orange">Confirm</button>
+                                            <button class="btn btn-outline-primary">Confirm</button>
                                         </div>
                                     </div>
                                 </div>
