--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -56,7 +56,7 @@
                     <td style="width: 15%;">{{fieldPosition}}</td>
                     <td style="min-width: 50px;">{{businessPhone}}</td>
                 
-                    <td style="width: 127px;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit user</button></a></td>
+                    <td style="width: 127px;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit User</button></a></td>
 
                     <td style="width: 127px;">
                         <form method="post" action="/deleteUser">
