--- a/views/administrator/webcontent/speaker.hbs
+++ b/views/administrator/webcontent/speaker.hbs
@@ -13,11 +13,13 @@
         {{> menu}}
     
         <h1>{{heading}}</h1>
-        <br>
-        <br>
-        <div class="admin-speaker-jumbotron">
 
-        <button class="btn btn-outline-success" data-toggle="modal" data-target="#newSpeakerForm">New Speaker</button>
+        <div class="admin-speaker-jumbotron">
+        <br><br>
+        
+        <h3>Current Speakers</h3>
+        
+        <button class="btn btn-success" data-toggle="modal" data-target="#newSpeakerForm">Add New Speaker</button>
         <br><br>
         <div class="modal fade" id="newSpeakerForm{{speaker_id}}" tabindex="-1" role="dialog"
             aria-labelledby="newSpeakerFormLabel" aria-hidden="true">
