--- a/views/administrator/user.hbs
+++ b/views/administrator/user.hbs
@@ -77,6 +77,7 @@
                             <option disabled selected value="null_value">Select Country</option>
                             <option value="Canada" {{defaultDropdown "Canada" user.country}}>Canada</option>
                             <option value="United States" {{defaultDropdown "United States" user.country}}>United States</option>
+                            <option value="Other" {{defaultDropdown "Other" user.country}}>Other</option>
                         </select>
                 </div>
                 <div class="form-group col-md-4">
@@ -98,8 +99,59 @@
                         <option {{defaultDropdown "NU" user.province_state}} value="NU">Nunavut</option>
                         {{else if (checkCountry "United States" user.country)}}
                         <option disabled selected value="null_value">Select State</option>
+                        <option {{defaultDropdown "AL" user.province_state}} value="AL">Alabama</option>
+                        <option {{defaultDropdown "AK" user.province_state}} value="AK">Alaska</option>
+                        <option {{defaultDropdown "AZ" user.province_state}} value="AZ">Arizona</option>
+                        <option {{defaultDropdown "AR" user.province_state}} value="AR">Arkansas</option>
                         <option {{defaultDropdown "CA" user.province_state}} value="CA">California</option>
+                        <option {{defaultDropdown "CO" user.province_state}} value="CO">Colorado</option>
+                        <option {{defaultDropdown "CT" user.province_state}} value="CT">Connecticut</option>
+                        <option {{defaultDropdown "DE" user.province_state}} value="DE">Delaware</option>
+                        <option {{defaultDropdown "DC" user.province_state}} value="DC">District Of Columbia</option>
+                        <option {{defaultDropdown "FL" user.province_state}} value="FL">Florida</option>
+                        <option {{defaultDropdown "GA" user.province_state}} value="GA">Georgia</option>
+                        <option {{defaultDropdown "HI" user.province_state}} value="HI">Hawaii</option>
+                        <option {{defaultDropdown "ID" user.province_state}} value="ID">Idaho</option>
+                        <option {{defaultDropdown "IL" user.province_state}} value="IL">Illinois</option>
+                        <option {{defaultDropdown "IN" user.province_state}} value="IN">Indiana</option>
+                        <option {{defaultDropdown "IA" user.province_state}} value="IA">Iowa</option>
+                        <option {{defaultDropdown "KS" user.province_state}} value="KS">Kansas</option>
+                        <option {{defaultDropdown "KY" user.province_state}} value="KY">Kentucky</option>
+                        <option {{defaultDropdown "LA" user.province_state}} value="LA">Louisiana</option>
+                        <option {{defaultDropdown "ME" user.province_state}} value="ME">Maine</option>
+                        <option {{defaultDropdown "MD" user.province_state}} value="MD">Maryland</option>
+                        <option {{defaultDropdown "MA" user.province_state}} value="MA">Massachusetts</option>
+                        <option {{defaultDropdown "MI" user.province_state}} value="MI">Michigan</option>
+                        <option {{defaultDropdown "MN" user.province_state}} value="MN">Minnesota</option>
+                        <option {{defaultDropdown "MS" user.province_state}} value="MS">Mississippi</option>
+                        <option {{defaultDropdown "MO" user.province_state}} value="MO">Missouri</option>
+                        <option {{defaultDropdown "MT" user.province_state}} value="MT">Montana</option>
+                        <option {{defaultDropdown "NE" user.province_state}} value="NE">Nebraska</option>
+                        <option {{defaultDropdown "NV" user.province_state}} value="NV">Nevada</option>
+                        <option {{defaultDropdown "NH" user.province_state}} value="NH">New Hampshire</option>
+                        <option {{defaultDropdown "NJ" user.province_state}} value="NJ">New Jersey</option>
+                        <option {{defaultDropdown "NM" user.province_state}} value="NM">New Mexico</option>
                         <option {{defaultDropdown "NY" user.province_state}} value="NY">New York</option>
+                        <option {{defaultDropdown "NC" user.province_state}} value="NC">North Carolina</option>
+                        <option {{defaultDropdown "ND" user.province_state}} value="ND">North Dakota</option>
+                        <option {{defaultDropdown "OH" user.province_state}} value="OH">Ohio</option>
+                        <option {{defaultDropdown "OK" user.province_state}} value="OK">Oklahoma</option>
+                        <option {{defaultDropdown "OR" user.province_state}} value="OR">Oregon</option>
+                        <option {{defaultDropdown "PA" user.province_state}} value="PA">Pennsylvania</option>
+                        <option {{defaultDropdown "RI" user.province_state}} value="RI">Rhode Island</option>
+                        <option {{defaultDropdown "SC" user.province_state}} value="SC">South Carolina</option>
+                        <option {{defaultDropdown "SD" user.province_state}} value="SD">South Dakota</option>
+                        <option {{defaultDropdown "TN" user.province_state}} value="TN">Tennessee</option>
+                        <option {{defaultDropdown "TX" user.province_state}} value="TX">Texas</option>
+                        <option {{defaultDropdown "UT" user.province_state}} value="UT">Utah</option>
+                        <option {{defaultDropdown "VT" user.province_state}} value="VT">Vermont</option>
+                        <option {{defaultDropdown "VA" user.province_state}} value="VA">Virginia</option>
+                        <option {{defaultDropdown "WA" user.province_state}} value="WA">Washington</option>
+                        <option {{defaultDropdown "WV" user.province_state}} value="WV">West Virginia</option>
+                        <option {{defaultDropdown "WI" user.province_state}} value="WI">Wisconsin</option>
+                        <option {{defaultDropdown "WY" user.province_state}} value="WY">Wyoming</option>
+                        {{else if (checkCountry "Other" user.country)}}
+                        <option {{defaultDropdown "Other" user.province_state}} value="Other">Other</option>
                         {{else}}
                         <option disabled selected value="null_value">Province/State</option>
                         {{/if}}
