--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -92,7 +92,8 @@
                         <select name="country" class="form-control country">
                             <option disabled selected value="null_value">select your country</option>
                             <option value="Canada">Canada</option>
-                            <option value="United_States">United States</option>
+                            <option value="United States">United States</option>
+                            <option value="Other">Other</option>
                         </select>
                     </div>
                     <div class="form-group col-md-4">
