--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -246,7 +246,7 @@ form:after {
     background-position: 10px -53px !important
 }
 
-#content form input[type="submit"] {
+/* #content form input[type="submit"] {
     background: rgb(254, 231, 154);
     background: -moz-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
     background: -webkit-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
@@ -267,7 +267,6 @@ form:after {
     border: 1px solid #D69E31;
     color: #85592e;
     cursor: pointer;
-    /* float: left; */
     position: center;
     font: bold 15px Helvetica, Arial, sans-serif;
     height: 35px;
@@ -275,9 +274,9 @@ form:after {
     position: relative;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     width: 120px;
-}
+} */
 
-#content form input[type="submit"]:hover {
+/* #content form input[type="submit"]:hover {
     background: rgb(254, 193, 81);
     background: -moz-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
     background: -webkit-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
@@ -285,7 +284,7 @@ form:after {
     background: -ms-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
     background: linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fec151', endColorstr='#fee79a', GradientType=0);
-}
+} */
 
 #content form div a {
     color: #004a80;
@@ -295,7 +294,7 @@ form:after {
     text-decoration: underline;
 }
 
-.button {
+/* .button {
     background: rgb(247, 249, 250);
     background: -moz-linear-gradient(top, rgba(247, 249, 250, 1) 0%, rgba(240, 240, 240, 1) 100%);
     background: -webkit-linear-gradient(top, rgba(247, 249, 250, 1) 0%, rgba(240, 240, 240, 1) 100%);
@@ -315,7 +314,7 @@ form:after {
     border-radius: 0 0 5px 5px;
     border-top: 1px solid #CFD5D9;
     padding: 15px 0;
-}
+} */
 
 .button a {
     background: url(https://cssdeck.com/uploads/media/items/8/8bcLQqF.png) 0 -112px no-repeat;
