Added changing calendar instructions

--- a/views/administrator/webcontent/calendar.hbs
+++ b/views/administrator/webcontent/calendar.hbs
@@ -36,6 +36,27 @@
             <br>
             <ol>
                 <li>Log into the <a href="https://outlook.live.com/owa/">outlook</a> account with the Calendar you would like to change to.</li>
+                <li>Click on the settings icon at the top right menu bar</li>
+                <li>Click on the "View all Outlook settings" at the bottom of the settings bar<br/>
+                    <figure class="figure">
+                    <img src="/images/calendar/instructions/instruct_1.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
+                    <figcaption class="figure-caption">Outlook Settings Menu</figcaption>
+                </figure>
+                </li>
+                <li>When the "Outlook settings" menu appears, navigate to <strong>Calendar > Shared calendars</strong>
+                    <figure class="figure">
+                    <img src="/images/calendar/instructions/instruct_2.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
+                    <figcaption class="figure-caption">Outlook All Settings Menu</figcaption>
+                </li>
+                <li>Select the calendar you wish to publish with the <strong>Can view all details</strong> option and then click on <strong>Publish</strong></li>
+                <li>You will now see an HTML link that you can click on and select the copy link<br/>
+                    <figure class="figure">
+                    <img src="/images/calendar/instructions/instruct_3.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
+                    <figcaption class="figure-caption">HTML Link</figcaption>
+                </li>
+                <li>Navigate back to this page and <strong>Paste (CTRL+v)</strong> into the Calendar HTML Link Field</li>
+                <li>Click <Strong>Change</Strong></li>
+                <li>Done!</li>
             </ol>
             {{!-- </div> --}}
         </hr>
