--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -38,11 +38,11 @@
                         </div>
                         <div class="form-group col">
                             <label for="firstName"><b>First Name *</b></label>
-                            <input type="text" class="form-control" placeholder="First name" name="firstName" value="{{../firstName}}">
+                            <input type="text" class="form-control" placeholder="First name" name="firstName" value="{{../firstName}}" required>
                         </div>
                         <div class="form-group col">
                             <label for="lastName"><b>Last Name *</b></label>
-                            <input type="text" class="form-control" placeholder="Last name" name="lastName" value="{{../lastName}}">
+                            <input type="text" class="form-control" placeholder="Last name" name="lastName" value="{{../lastName}}" required>
                         </div>
                     </div>
                     <div class="form-row">
