--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -48,11 +48,11 @@
                 </div>
                 <div class="form-group col">
                     <label for="firstName"><b>First Name *</b></label>
-                    <input type="text" class="form-control" placeholder="First name" name="firstName">
+                    <input type="text" class="form-control" placeholder="First name" name="firstName" required>
                 </div>
                 <div class="form-group col">
                     <label for="lastName"><b>Last Name *</b></label>
-                    <input type="text" class="form-control" placeholder="Last name" name="lastName">
+                    <input type="text" class="form-control" placeholder="Last name" name="lastName" required>
                 </div>
             </div>
             <div class="form-row">
