--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -149,19 +149,6 @@ a.sidenav_panel {
     }
 }
 
-
-
-.edit_single_event_button {
-    padding: 0;
-    border: none;
-    background: white;
-    float: right;
-    font-size: 18px;
-    margin-right: 0.7%;
-    text-shadow: 0px 1px #888888;
-    width: 140px;
-}
-
 .eventTableLink {
     color: black;
     text-decoration: none;
@@ -309,13 +296,9 @@ a.sidenav_panel {
 
 }
 
-.single_event_text {
-    /* text-indent: 4%; */
-}
-
 .event_desc_box {
-    background-color: #e9ecef;
-    border: 25px solid #e9ecef;
+    background-color: #f0f2f4;
+    border: 25px solid #f0f2f4;
     height: 30%;
 }
 
@@ -344,11 +327,6 @@ a.sidenav_panel {
 
 text{
     display: none;
-}
-
-#printDoc {
-    float: right;
-    width: 100%;
 }
 
 #iframediv {
