--- a/views/administrator/webcontent/calendar.hbs
+++ b/views/administrator/webcontent/calendar.hbs
@@ -41,9 +41,9 @@
                     <figure class="figure">
                     <img src="/images/calendar/instructions/instruct_1.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
                     <figcaption class="figure-caption">Outlook Settings Menu</figcaption>
-                </figure>
+                    </figure>
                 </li>
-                <li>When the "Outlook settings" menu appears, navigate to <strong>Calendar > Shared calendars</strong>
+                <li>When the "Outlook settings" menu appears, navigate to <strong>Calendar > Shared calendars</strong><br/>
                     <figure class="figure">
                     <img src="/images/calendar/instructions/instruct_2.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
                     <figcaption class="figure-caption">Outlook All Settings Menu</figcaption>
@@ -54,7 +54,7 @@
                     <img src="/images/calendar/instructions/instruct_3.jpg" class="figure-img img-fluid rounded img-thumbnail" width="50%" /><br>
                     <figcaption class="figure-caption">HTML Link</figcaption>
                 </li>
-                <li>Navigate back to this page and <strong>Paste (CTRL+v)</strong> into the Calendar HTML Link Field</li>
+                <li>Navigate back to this page and <strong>Paste (CTRL+v)</strong> into the <a href="#calendariFrame">Calendar HTML</a> Field</li>
                 <li>Click <Strong>Change</Strong></li>
                 <li>Done!</li>
             </ol>
