removed extra images, fixed deadlinks

--- a/views/administrator/webcontent/calendar.hbs
+++ b/views/administrator/webcontent/calendar.hbs
@@ -25,14 +25,11 @@
                 </small>
             </div>
             <button style="float: right; margin-right: 2%;" type="submit" class="btn btn-primary">Change</button>
-
-            {{!-- <button type="submit" class="btn btn-primary">Change</button> --}}
         </form>
 
         <br><br>
         <hr>
-            {{!-- <div id="calendariFrame" style="margin-left: 2%;"> --}}
-            <h3 id="calendariFrame" style="margin-left: 2%;">How to Insert a New Calendar</h3>
+            <h3 id="calendarInstructions" style="margin-left: 2%;">How to Insert a New Calendar</h3>
             <br>
             <ol>
                 <li>Log into the <a href="https://outlook.live.com/owa/">outlook</a> account with the Calendar you would like to change to.</li>
