updated instruction images connected calendar to database fixed css/server content in admin

--- a/views/administrator/webcontent/calendar.hbs
+++ b/views/administrator/webcontent/calendar.hbs
@@ -16,7 +16,7 @@
         <h1>{{heading}}</h1>
         <br><br>
         <h2 style="margin-left: 2%;">Change Event Page</h2>
-        <form method="POST" action="/updateAbout" class="half_width">
+        <form method="POST" action="/updateCalendar" class="half_width">
             <div class="form-group col-md-12 ">
                 <label for="calendariFrame">Calendar Link</label>
                 <textarea class="form-control" id="calendariFrame" name="calendariFrame" rows="5" required></textarea>
