--- a/views/registration_choose.hbs
+++ b/views/registration_choose.hbs
@@ -55,6 +55,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
-
+{{#unless inAdminPanel}}
 {{> footer}}
+{{/unless}}
 </html>
