--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,10 +235,12 @@ form {
 #profileImage {
     float: left;
     cursor: pointer;
-    height: 180px;
+    height:180px;
     width: 180px;
+    max-width: 100%;
     margin-right: 10%;
     border-radius: 50%;
+    object-fit: cover
 }
 
 .speaker-info {
