--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
+{{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> --}}
 {{> head}}
 
 <body>
     {{> menu}}
 
     <form>
+
+        <div id="messages" class="hide" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                    aria-hidden="true">&times;</span></button>
+            <div id="messages_content"></div>
+        </div>
 
         <h1>Forgot your password?</h1>
         <br>
@@ -16,7 +24,8 @@
             <br>
 
             <div class="child-div">
-                
+
+
                 <br>
 
                 <label for="email">Email Address</label>
@@ -25,12 +34,12 @@
                 <br><br>
 
                 <p><input type="submit"></p>
-                
+
                 <br><br>
 
 
             </div>
-        
+
 
     </form>
     </div>
@@ -43,3 +52,4 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/js/forgotpassword.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
