--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -3,28 +3,37 @@
 {{> head}}
 
 <body>
-    {{> menu}}
+  {{> menu}}
 
 
-<form method="POST" action="?">
-  <legend>Reset Password</legend>
-  <div class="form-group">
-    <label for="password">New Password</label>
-    <input class="form-control" type="password" name="password" required value="" placeholder="New password" autofocus="autofocus"/>
-  </div>
-  {{!-- <div class="form-group">
+  <form method="POST" action="?">
+
+    <div id="messages" class="hide" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+          aria-hidden="true">&times;</span></button>
+      <div id="messages_content"></div>
+    </div>
+
+    <legend>Reset Password</legend>
+    <div class="form-group">
+      <label for="password">New Password</label>
+      <input class="form-control" type="password" name="password" required value="" placeholder="New password"
+        autofocus="autofocus" />
+    </div>
+    {{!-- <div class="form-group">
     <label for="confirm">Confirm Password</label>
     <input class="form-control" type="password" name="confirm" required value="" placeholder="Confirm password"/>
   </div> --}}
-  <div class="form-group">
-    <button class="btn btn-primary" type="submit">Update Password</button>
-  </div>
-</form>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Update Password</button>
+    </div>
+  </form>
 
 </body>
 {{> footer}}
 
 </html>
 
-{{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> --}}
-{{!-- <script src="/static/js/forgotpassword.js"></script> --}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+{{!-- <script src="/static/js/passwordreset.js"></script> --}}
