--- a/views/administrator/webcontent/home.hbs
+++ b/views/administrator/webcontent/home.hbs
@@ -46,6 +46,19 @@
     </div>
 
     <div class="admin-home-jumbotron">
+        <h3>Change Home Page Title</h3>
+        <div class="form-group">
+            <form method="POST" action="/changeHomeTitle" style="margin: 0;">
+                <input type="text" class="form-control" id="homeTitle" name="homeTitle" aria-describedby="emailHelp" placeholder="{{homeTitle}}" required>
+                <br>
+                <button type="submit" class="btn btn-outline-primary">Change Title</button>
+            </form>
+        </div>
+    </div>
+
+    <br><br>
+
+    <div class="admin-home-jumbotron">
     <h3><span>Change Carousel Image ({{carouselImgs.length}})</span></h3>
     <button type="button" data-toggle="modal" data-target="#uploadCarouselImage" class="btn btn-success add_image_button">Add New Carousel Image</button>
     <br><br>
