--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,9 +7,8 @@
     <div class="parent">
         <div class="IPE_header">
             <img src="/images/IPE_logo.png" height="100" width="100" alt="IPE Logo">
-            <span class="home-header-text">Power Engineering 2020</span>
+            <span class="home-header-text">{{homeTitle}}</span>
         </div>
-        {{!-- <h1 class="home_slider child_1">Power Engineering 2020</h1> --}}
 
         <div id="carouselHomeIndicators" class="carousel slide child_2" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -36,14 +35,14 @@
             
         <br>
         <div class="child_3">
-          <h1 class="our_sponsors"><span>Our Sponsors</span></h1>
-           {{#each sponsorImgs}}
+            <h1 class="our_sponsors"><span>Our Sponsors</span></h1>
+            {{#each sponsorImgs}}
                 <div class="logo_col">
                     <img src="/images/index/sponsors/{{this}}" width="100%">
                 </div>
-           {{/each}}
+            {{/each}}
         </div>
-   
+
     </div>
     
 </body>
