--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> --}}
+{{!-- <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet"> --}}
+
 {{> head}}
 
 <body>
@@ -10,8 +11,8 @@
     <form>
 
         <div id="messages" class="hide" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true"></span></button>
             <div id="messages_content"></div>
         </div>
 
@@ -27,13 +28,25 @@
 
 
                 <br>
-
+                {{!-- 
                 <label for="email">Email Address</label>
-                <input id="email" name="email" type="text" required />
+                <input id="email" name="email" type="text" required /> --}}
+
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input id="email" class="form-control" input id="email" type="text" name="email" required value=""
+                        placeholder="Email" autofocus="autofocus" />
+                </div>
 
                 <br><br>
 
-                <p><input type="submit"></p>
+                {{!-- <p><input type="submit"></p> --}}
+
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Send Reset Link</button>
+                </div>
+
+
 
                 <br><br>
 
@@ -52,4 +65,4 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/js/forgotpassword.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
