--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -10,7 +10,7 @@
 
     <div id="messages" class="hide" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-          aria-hidden="true">&times;</span></button>
+          aria-hidden="true"></span></button>
       <div id="messages_content"></div>
     </div>
 
